# synphora

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.cursor/rules/: guidance.mdc
backend/: README.md  pyproject.toml  ruff.sh  test_tool_real.py
backend/src/synphora/: agent.py  artifact_manager.py  cli.py  custom_stream_example.py  file_storage.py  langgraph_sse.py  llm.py  models.py  server.py  sse.py  tool.py  workflow.py
backend/src/synphora/prompt/: __init__.py  agent_prompts.py  prompts.py  renderer.py  tool_prompts.py
backend/src/synphora/prompt/templates/: agent-system-prompt.md  article-evaluator-comment-prompt.md  article-evaluator-introduction-prompt.md  article-evaluator-title-prompt.md  article-evaluator-user-prompt.md  article_evaluator_system.jinja2  article_evaluator_user.jinja2  user.jinja2
backend/tests/: test_artifact_api.py
backend/tests/data/store/: 5d1711d6-df37-452b-9ef2-77025c7aa5ae.txt  metadata.json
docs/: agent-architecture-plan.md  artifact-backend-migration.md  frontend.md  sse-protocol.md  streaming-artifact-plan.md
frontend/: next.config.ts  nodemon.json  package.json  pnpm-lock.yaml
frontend/app/: chatbot-demo.tsx  chatbot.tsx  globals.css  page.tsx  synphora.tsx  v0-clone.tsx  welcome.tsx
frontend/components/: artifact.tsx  chatbot.tsx  conversation.tsx
frontend/lib/: api.ts  markdown.ts  test-data.ts  types.ts
